# tinygif

./: .gitignore  Cargo.toml  README.md
benches/: decode.rs
src/: bitstream.rs  lib.rs  lzw.rs  parser.rs
