[package]
name = "tinygif"
version = "0.0.2"
edition = "2021"
authors = ["Andelf <andelf@gmail.com>"]
repository = "https://github.com/andelf/tinygif"
documentation = "https://docs.rs/tinygif"
homepage = "https://github.com/andelf/tinygif"
categories = ["embedded", "no-std", "multimedia::images"]
description = "No-std, high memory footprint GIF image loader"
keywords = ["graphics", "embedded-graphics", "gif", "animation", "image"]
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
defmt = { version = "0.3.4", optional = true }
embedded-graphics = "0.8.0"
heapless = "0.7.16"

[dev-dependencies]
nu-pretty-hex = "0.80.0"
bmp = "0.5.0"
